fixed sytledmypages text not fitting

--- a/WEBWEB01/links/styledmypagesstyle.css
+++ b/WEBWEB01/links/styledmypagesstyle.css
@@ -18,7 +18,7 @@ body{
 div{
     background-color: #ecc265;
     text-align: center;
-    width: 10%;
+    width: 15%;
     padding: 1%;
     padding-top: 0.1%;
     padding-bottom: 0.1%;
